cargo-features = ["edition2024"]

[package]
name = "shielded_rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
actix-web = "4"
actix-rt = "2"
actix = "0.13"
actix-macros = "0.2"
actix-cors = "0.7.0"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
once_cell = "1.10"
serde = { version = "1", features = ["derive"] }
shielded_rust = { path = "./libs/shielded_rust" }
itertools = { version = "0.13.0", features = ["use_std"] }
